--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>van Boom</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E+T</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
+  <!-- Header section -->
+  <header>
+    <h1>The Beginning Of Something</h1>
+  </header>
+  
+  <!-- Main content section -->
+  <main>
     <div class="container">
-        <h1>van Boom</h1>
+      <h2>About the Site</h2>
+      <p>This website uses a matte black theme to provide a sleek and minimalistic look. The background is dark with subtle accents to ensure readability while maintaining a clean design.</p>
+      <p>Explore more about this design <a href="#">here</a>.</p>
     </div>
+  </main>
+  
+  <!-- Footer section -->
+  <footer>
+    <p>© 2024 My First Website</p>
+  </footer>
 </body>
 </html>
