--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E+T</title>
+  <title>VanBoom.co.za</title>
   <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
@@ -15,15 +15,15 @@
   <!-- Main content section -->
   <main>
     <div class="container">
-      <h2>About the Site</h2>
-      <p>This website uses a matte black theme to provide a sleek and minimalistic look. The background is dark with subtle accents to ensure readability while maintaining a clean design.</p>
-      <p>Explore more about this design <a href="#">here</a>.</p>
+      <h2></h2>
+      <p></p>
+      <p></p>
     </div>
   </main>
   
   <!-- Footer section -->
   <footer>
-    <p>© 2024 My First Website</p>
+    <p>© 2024</p>
   </footer>
 </body>
 </html>
